<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="289dp"
        android:layout_height="574dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="225dp"
            android:layout_height="147dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/title_name"
            android:textColor="#673AB7"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTxtPeopleNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:height="48dp"
            android:autofillHints="testHint"
            android:ems="10"
            android:hint="@string/num_people"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtValue" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="211dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:text="@string/split_value"
            android:textAlignment="center"
            android:textColor="#673AB7"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTxtPeopleNum" />

        <EditText
            android:id="@+id/editTxtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:height="48dp"
            android:autofillHints="testHint"
            android:ems="10"
            android:hint="@string/pay_value"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="259dp"
            android:layout_height="104dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultView">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/speakFloatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:clickable="true"
                android:contentDescription="@string/speak"
                app:backgroundTint="#673AB7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#FFFFFF"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/shareFloatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:clickable="true"
                android:contentDescription="@string/share"
                android:tint="#F6F0F0"
                app:backgroundTint="#673AB7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="#FFFCFC"
                app:srcCompat="?attr/actionModeShareDrawable" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>